# Homework-10.1

./: .flake8  .gitignore  Homework 9.1.rar  README.md  end  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
